# vitacompanion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmd.c  cmd.h  cmd_handler.c  cmd_handler.h  main.c  main.h  net.c  net_handler.c  vitacompanion.yml
src/: cmd.c  cmd_definitions.c  cmd_definitions.h  log.c  log.h  main.c  net.c  nosleep.c  nosleep.h  parser.c  parser.h
tests/: test_libftpvita_compat.py
